--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "4.3.2",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "bootstrap": "4.0.0-beta",
+    "ckeditor": "^4.8.0",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
